# terminal-editor

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  editor-config.json  editor_config.cpp  editor_config.h  file_utilities.cpp  file_utilities.h  format_source.sh  main.cpp  screen_buffer.cpp  screen_buffer.h  terminal_size.cpp  terminal_size.h  terminal_test_positions.sh  text.txt  text_buffer.cpp  text_buffer.h  text_parser.cpp  text_renderer.cpp  text_renderer.h  zerrors.h  zpreprocessor.h  zwcwidth.h
buildscript/: build.sh
ci-builds/: build.sh  prepare-build.bat  prepare-build.sh  test.bat  test.sh
editor/: CMakeLists.txt  main.cpp
editorlib/: CMakeLists.txt  editor_config.cpp  editor_config.h  grapheme_buffer.cpp  grapheme_buffer.h  text_buffer.cpp  text_buffer.h  text_parser.cpp  text_parser.h  text_renderer.cpp  text_renderer.h  width_cache.cpp  width_cache.h  zwcwidth.h
terminal_hacking/: build.sh  draw_grid.cpp
tests/: CMakeLists.txt  main-tests.cpp  preprocessor-tests.cpp  tests.cpp  textbuffer-tests.cpp  zerrors-tests.cpp
tests/test-data/: four-lines-and-lf.txt  non-empty-line-at-end.txt  one-line.txt  test-clean.txt  test-dirty.txt
text_ui/: CMakeLists.txt  console_reader.cpp  console_reader.h  editor_window.cpp  editor_window.h  geometry.h  screen_buffer.cpp  screen_buffer.h  screen_functions.cpp  screen_functions.h  terminal_io.cpp  terminal_io.h  terminal_size.cpp  terminal_size.h  text_ui.h  window.cpp  window.h
tools/: build.sh  examine_esc_sequences.cpp
tools/unicode/: language_strings.h  utf8-test-clean.txt  wcswidth.cpp
unicode_hacking/: generate.sh  language_strings.cpp  test_files.cpp  test_strings.cpp  test_strings.h  utf8-test-dirty.txt  wcswidth.cpp
utilities/: CMakeLists.txt  NatvisFile.natvis  geometry.h  zlogging.h
